--- a/VirtualBike/res/layout/activity_map.xml
+++ b/VirtualBike/res/layout/activity_map.xml
@@ -1,17 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MapActivity" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+ 		<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"    
+        android:gravity="center"   
+        android:orientation="horizontal" >
+	 	<com.baidu.mapapi.map.MapView
+		        android:id="@+id/bmapView"
+		        android:layout_width="fill_parent"
+		        android:layout_height="fill_parent"
+		        android:layout_alignParentTop="true"
+		        android:clickable="true" />
+	 	</LinearLayout>
+ 		<LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+        <Button
+            android:id="@+id/locate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dip"
+            android:layout_marginLeft="2dip"
+            android:layout_marginTop="2dip"
+            android:layout_weight="1"
+            android:padding="10dip"
+            android:text="定位" />
 
- 	<com.baidu.mapapi.map.MapView 
-         android:id="@+id/bmapView"
-         android:layout_width="fill_parent" 
-         android:layout_height="fill_parent" 
-         android:clickable="true"     />
-
-</RelativeLayout>
+    </LinearLayout>
+    
+      
+</LinearLayout>
