--- a/VirtualBike/res/layout/activity_concretinfo.xml
+++ b/VirtualBike/res/layout/activity_concretinfo.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+     
  <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,23 +16,28 @@
             android:layout_weight="0"
             android:text="可借：" />
 
-        <WebView
-            android:id="@+id/webViewborrowinfo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" 
-            android:layout_weight="3"/>
+       
+
+        <ImageView
+            android:id="@+id/imageViewborrowinfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+             />
+
         <TextView
             android:id="@+id/textViewreturninfolabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="可还：" 
             android:layout_weight="0"/>
-
-        <WebView
-            android:id="@+id/webViewreturninfo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" 
-            android:layout_weight="3"/>
+		 <ImageView
+            android:id="@+id/imageViewreturninfo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+             />
+       
 
     </LinearLayout>
 
@@ -67,4 +73,5 @@
 		        android:layout_alignParentTop="true"
 		        android:clickable="true" />
 	 	</LinearLayout>
+	 	
 </LinearLayout>
