--- a/VirtualBike/res/layout/activity_stationlists.xml
+++ b/VirtualBike/res/layout/activity_stationlists.xml
@@ -5,14 +5,16 @@
     android:orientation="vertical" >
 
     <LinearLayout
+        android:id="@+id/searchlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+         >
 
         <EditText
             android:id="@+id/text_search_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_weight="2"
             android:ems="10" >
 
             <requestFocus />
@@ -22,15 +24,19 @@
             android:id="@+id/searchbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Button" 
-            android:layout_weight="0"/>
+            android:layout_weight="0"
+            android:text="查询"
+             android:background="@drawable/buttonstyle" />
 
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/liststationView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
-
+   		 </LinearLayout>
+		<ListView
+		    android:id="@+id/listview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+		    
+		</ListView>
+   
+	
+  
+	
 </LinearLayout>
