--- a/VirtualBike/res/layout/activity_concretinfo.xml
+++ b/VirtualBike/res/layout/activity_concretinfo.xml
@@ -6,13 +6,13 @@
      
  <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_weight="0" >
 
         <TextView
             android:id="@+id/textViewborrowinfolabel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:layout_weight="0"
             android:text="可借：" />
 
@@ -21,20 +21,21 @@
         <ImageView
             android:id="@+id/imageViewborrowinfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
              />
 
         <TextView
             android:id="@+id/textViewreturninfolabel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
             android:text="可还：" 
             android:layout_weight="0"/>
 		 <ImageView
             android:id="@+id/imageViewreturninfo"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            
             android:layout_weight="3"
              />
        
